Angular ------------ Added user dashboard. Fixed registration form and validation. Removed jwt.service - no longer needed
Express
------------
Added endpoints to update story attributes.
Created story model

--- a/src/app/components/login-page/login-page.component.css
+++ b/src/app/components/login-page/login-page.component.css
@@ -9,6 +9,7 @@
 
 #submit {
   margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 form {
@@ -17,4 +18,13 @@ form {
 
 form > * {
   padding: 5px;
+}
+
+div input {
+  margin: 10px;
+}
+
+.invalid-feedback {
+  margin-left: 10px;
+  text-align: left;
 }
