--- a/src/app/components/login-page/login-page.component.html
+++ b/src/app/components/login-page/login-page.component.html
@@ -16,7 +16,7 @@
     <form [formGroup]="loginForm" class="login-container" (ngSubmit)="login()">
       <div class="row">
         <div class="col-md-6 offset-md-3">
-          <div class="col-8">
+          <div class="col-10">
               <input placeholder="Username" type="text" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }">
             <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
               <div *ngIf="f.username.errors.required">Username is required</div>
@@ -25,21 +25,17 @@
         </div>
 
         <div class="col-md-6 offset-md-3">
-          <br>
-          <div class="col-8">
-              <input placeholder="Password" type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }">
+          <div class="col-10">
+              <input placeholder="Password" type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }">
               <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
                 <div *ngIf="f.password.errors.required">Password is required</div>
               </div>
           </div>
         </div>
       </div>
-      
-      <br>
+    
       <div class="row justify-content-center">
-        <button [disabled]="loading" class="btn btn-primary" type="submit">Login</button>
+        <button class="btn btn-primary" type="submit">Login</button>
       </div>
-
-      <br>
     </form>
   </div>
