--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -1,19 +1,45 @@
 <div id="dashboard" class="container-fluid">
 
-  <div class="row">
-      <img class="img-fluid rounded mx-auto d-block" src="../../../assets/profile.jpg">
-
-        <h3>Welcome, Emerson!</h3>
+  <div class="row" align="center">
+    <div class="col-sm-4 col-md-4 offset-lg-4 offset-sm-4">
+        <img class="img-thumbnail img-fluid" src="../../../assets/profile.jpg">
+        <hr class="hr-custom">
+      </div>
+        <h3 class="col-12"><small class="text-muted">Welcome,</small> Emerson!</h3>
 
   </div>
 
-  <h4><small>Bio</small></h4>
   <div class="row">
-    <div class="round-box col-8">
+    <div class="col-6">
+        <h5><small>Biography</small></h5>
+    </div>
+    <div class="col-6 text-right">
+      <button class="btn btn-link">Edit</button>
+    </div>
+    <div class="round-box col-12">
       <p>Some text</p>
     </div>
   </div>
 
+  <div class="row">
+    <div class="col-6">
+      <h5><small>My Stories</small></h5>
+    </div>
+    <div class="round-box col-12">
+      <p>Some text</p>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-6">
+      <h5><small>Liked Stories</small></h5>
+    </div>
+    <div class="round-box col-12">
+      <li>
+        <p>Story 1</p>
+      </li>
+    </div>
+  </div>
 
 
 </div>
