--- a/src/app/components/create-chapter/create-chapter.component.css
+++ b/src/app/components/create-chapter/create-chapter.component.css
@@ -10,10 +10,7 @@
     box-sizing: border-box;
     border-radius: 5px;
     display: block;
-    width: 100%;
-    max-width: 700px;
-    border-width: 1px;
-    border-style: solid;
+    border: 1px solid grey;
     padding: 8px;
     outline: 0;
     font-family: inherit;
@@ -21,22 +18,26 @@
   }
 
 #createChapter input[type="submit"] {
-    width:150px;
-    text-align:  center;
+    width: 150px;
+    text-align: center;
     background: #014089;
     border-color: transparent;
     color: #fff;
     cursor: pointer;
-    margin-left:auto;
-    margin-right:auto;
-    margin-top: 15px;
-    margin-bottom: 15px;
-    padding-top: 3px;
-    padding-bottom: 3px;
+    margin-left: auto;
+    margin-right: auto;
   }
   #headerBar{
     width: inherit !important;
     text-align:center;
     color: #fff;
     background: #014089;
+  }
+
+  #headerBar h3 {
+    padding: 5px;
+  }
+
+  #submit {
+    margin: 10px;
   }
