--- a/src/app/components/create-story/create-story.component.html
+++ b/src/app/components/create-story/create-story.component.html
@@ -1,44 +1,45 @@
-<div id = "createStory" class = "container-fluid">
-  <div id = "headerBar">
-    <h1> Create Story</h1>
+<div id="createStory" class="container-fluid">
+  <div id="headerBar">
+    <h3>Create Story</h3>
   </div>
   
-  <form [formGroup] = "storyForm" class = "story-container" (ngSubmit) ="storyCreate()">
+  <div *ngIf="error" class="alert alert-danger">{{error}}</div>
+  <form [formGroup]="storyForm" class="story-container" (ngSubmit)="storyCreate()">
     <!--Cover Image-->
     <div id="coverImage" class="row">
-        <div class="col-6 col-sm-3">
-          <h3 id = "coverImageHeader"> Cover Image </h3>
+        <div class="col-4">
             <label for="image-upload">
                 <img [src]="netImage" alt="Cover Image"> 
             </label>
-            <input id="image-upload" type="file" accept="image/*" formControlName = "coverImage" (change)="onFileSelected($event)">
+            <input id="image-upload" type="file" accept="image/*" formControlName="coverImage" (change)="onFileSelected($event)">
+            <hr>
+            <h5 id="coverImageHeader">Cover Image</h5>
         </div>      
     </div>
     <!--Story Title-->
-      <label for="storyTitle"><strong>Title</strong></label>
-        <div class = row>
-          <input type="title" placeholder="Title" formControlName ="title" minlength="4" maxlength = "50">
-          <div *ngIf=" formControls.title.errors" class="help-block">
-              <div *ngIf="formControls.title.errors.required">Story title is required</div>
-          </div>
-        </div>
-    <!--Story Tags-->  
-      <h5>Tags</h5>
-        <li *ngFor="let tag of tags">
-          <button (click)="selectTags()">{{ tag.name }}</button>
-        </li>
-    <!--Story Summary-->
-      <h5>Summary</h5>  
-      <textarea formControlName = "summary" placeholder = "Enter your story's summary...">
-      </textarea>
-      
-    <!--Story Cover Image--> 
+    <div class=row>
+      <input type="title" placeholder="Title" formControlName="title" class="form-control" required minlength="4" required maxlength="50" [ngClass]="{ 'is-invalid': submitted || (f.title.errors &&  f.title.touched)}">
+      <div *ngIf="submitted || f.title.errors" class="invalid-feedback">
+          <div *ngIf="f.title.errors.required">Story title is required.</div>
+          <div *ngIf="f.title.errors.minlength">Title must be at least 4 character long.</div>
+          <div *ngIf="f.title.errors.maxlength">Title cannot be more than 50 characters long.</div>
+      </div>
+    </div>
+    <!--Story Tags--> 
+    <br> 
+    <!--<p>Tags</p>
+    <li *ngFor="let tag of tags">
+      <button (click)="selectTags()">{{ tag.name }}</button>
+    </li>
+    <br>-->
+    <!--Story Summary--> 
+    <textarea id="summary" formControlName="summary" class="form-control" placeholder="Enter your story's summary..." [ngClass]="{ 'is-invalid': submitted || (f.summary.errors && f.summary.touched) }"></textarea>
+    <div *ngIf="submitted || f.summary.errors" class="invalid-feedback">
+        <div *ngIf="f.summary.errors.required">Summary is required.</div>
+    </div>
     
     <p>
-      <input type="submit" value = "Create Story">
+      <input type="submit" value="Create Story">
     </p>
-
-
   </form>
-
 </div>
