--- a/src/app/components/login-page/login-page.component.html
+++ b/src/app/components/login-page/login-page.component.html
@@ -17,8 +17,8 @@
       <div class="row">
         <div class="col-md-6 offset-md-3">
           <div class="col-10">
-              <input placeholder="Username" type="text" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }">
-            <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
+              <input placeholder="Username" type="text" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted || f.username.errors }">
+            <div *ngIf="submitted || (f.username.errors && f.username.touched)" class="invalid-feedback">
               <div *ngIf="f.username.errors.required">Username is required</div>
             </div>
           </div>
@@ -26,8 +26,8 @@
 
         <div class="col-md-6 offset-md-3">
           <div class="col-10">
-              <input placeholder="Password" type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }">
-              <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+              <input placeholder="Password" type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted || f.password.errors }">
+              <div *ngIf="submitted || (f.password.errors && f.password.touched)" class="invalid-feedback">
                 <div *ngIf="f.password.errors.required">Password is required</div>
               </div>
           </div>
