--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -36,8 +36,8 @@
 
             <div class="col-md-6 offset-md-3">
                 <div class="col-10">
-                    <input placeholder="Password" type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }">
-                    <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+                    <input placeholder="Password" type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted || f.password.errors }">
+                    <div *ngIf="submitted || (f.password.errors && f.password.touched)" class="invalid-feedback">
                         <div *ngIf="f.password.errors.required">Password is required</div>
                     </div>
                 </div>
@@ -45,8 +45,8 @@
 
             <div class="col-md-6 offset-md-3">
                 <div class="col-10">
-                    <input placeholder="Confirm password" type="password" formControlName="password_confirm" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password_confirm.errors }" pattern="{{f.password.value}}">
-                    <div *ngIf="registerForm.invalid && (submitted || f.password.touched)" class="invalid-feedback">
+                    <input placeholder="Confirm password" type="password" formControlName="password_confirm" class="form-control" [ngClass]="{ 'is-invalid': submitted || f.password_confirm.errors }" pattern="{{f.password.value}}">
+                    <div *ngIf="submitted || (f.password_confirm.errors && f.password_confirm.touched)" class="invalid-feedback">
                         <div *ngIf="f.password_confirm.errors.required">Confirm password is required</div>
                         <div *ngIf="f.password_confirm.errors.pattern">
                             Passwords do not match!
