--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -19,8 +19,11 @@
     
 <div class="row">
     <h5>See what's new!</h5>
-    <p><strong>It</strong> is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
-    <p><strong>Many</strong> desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
-    <p><strong>It</strong> is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
-    <p><strong>Many</strong> desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p><p><strong>It</strong> is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
+    <p><strong>v1.0.0 - Initial Released!</strong> Welcome to Keyblade Stories! This application has been in the works for a few months now. It started out as an idea on paper but with dedication and persistent it became a functioning application. We hope you enjoy the platform, we hope you tell your family and friends. We are striving to build a community to drive the success of this website. Thank you!</p>
+    <p>- James Mulholland & Emerson Hidalgo</p>
+</div>
+
+<div class="row">
+    <h5>I am new here, what can I do?</h5>
+    <p>Head over to the <a routerLink="/about">about page</a> where you can find more information about the website and quick how-to to get started. You do not need to be logged in to view stories. Feel free to nagivate through existing stories.</p>
 </div>
