--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -13,11 +13,13 @@
 
     <br>
     <div *ngIf="error" class="alert alert-danger">{{error}}</div>
+    <div *ngIf="message" class="alert alert-success">{{message}}</div>
     <form [formGroup]="registerForm" (ngSubmit)="signup()">
         <div id="avatar" class="row">
             <div class="col-7 col-sm-4">
                 <label for="image-upload">
-                    <img [src]="netImage" alt="avatar"> 
+                    <img *ngIf="!netImage" src="../../../assets/profile.jpg" alt="avatar"> 
+                    <img *ngIf="netImage" [src]="netImage" alt="avatar"> 
                 </label>
                 <input formControlName="profileImage" id="image-upload" type="file" accept="image/*" (change)="onFileSelected($event)">
             </div>    
@@ -27,28 +29,28 @@
             <div class="col-md-6 offset-md-3">
                 <div class="col-10">
                     <input placeholder="Username" type="text" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }">
-                    <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
-                        <div *ngIf="f.username.errors.required">Username is required.</div>
-                    </div>
+                    <div *ngIf="submitted || (f.username.touched && f.username.errors)" class="invalid-feedback">
+                        <div *ngIf="f.username.invalid && f.username.errors.required">Username is required</div>
+                      </div>
                 </div>
             </div>
             <br>
 
             <div class="col-md-6 offset-md-3">
                 <div class="col-10">
-                    <input placeholder="Password" type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted || f.password.errors }">
-                    <div *ngIf="submitted || (f.password.errors && f.password.touched)" class="invalid-feedback">
-                        <div *ngIf="f.password.errors.required">Password is required</div>
-                    </div>
+                    <input placeholder="Password" type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }">
+                    <div *ngIf="submitted || (f.password.touched && f.password.errors)" class="invalid-feedback">
+                        <div *ngIf="f.password.invalid && f.password.errors.required">Password is required</div>
+                      </div>
                 </div>
             </div>
 
             <div class="col-md-6 offset-md-3">
                 <div class="col-10">
-                    <input placeholder="Confirm password" type="password" formControlName="password_confirm" class="form-control" [ngClass]="{ 'is-invalid': submitted || f.password_confirm.errors }" pattern="{{f.password.value}}">
-                    <div *ngIf="submitted || (f.password_confirm.errors && f.password_confirm.touched)" class="invalid-feedback">
-                        <div *ngIf="f.password_confirm.errors.required">Confirm password is required</div>
-                        <div *ngIf="f.password_confirm.errors.pattern">
+                    <input placeholder="Confirm password" type="password" formControlName="password_confirm" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password_confirm.errors }" pattern="{{f.password.value}}">
+                    <div *ngIf="submitted || (f.password_confirm.touched && f.password_confirm.errors)" class="invalid-feedback">
+                        <div *ngIf="f.password_confirm.invalid &&f.password_confirm.errors.required">Confirm password is required</div>
+                        <div *ngIf="f.password_confirm.invalid &&f.password_confirm.errors.pattern">
                             Passwords do not match!
                         </div>
                     </div>
