--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,7 @@
 @import "~font-awesome/css/font-awesome.css";
 @import "~roboto-fontface/css/roboto/roboto-fontface.css";
 @import url('https://fonts.googleapis.com/css?family=Major+Mono+Display');
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 
 /* ---------------------------------------------------
     COLOR VARIABLES
@@ -22,6 +23,11 @@
 /* ---------------------------------------------------
     GENERAL STYLE
 ----------------------------------------------------- */
+
+html {
+    font-family: 'Roboto', sans-serif;
+}
+
 .wrapper {
     width: 100%;
     display: flex;
