Added Info to Home and About
Added to info on the home and about page for some things that users may what to know and for some humor.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -27,3 +27,8 @@
     <h5>I am new here, what can I do?</h5>
     <p>Head over to the <a routerLink="/about">about page</a> where you can find more information about the website and quick how-to to get started. You do not need to be logged in to view stories. Feel free to nagivate through existing stories.</p>
 </div>
+
+<div class="row">
+    <h5>Discovered an bug or ran into an issue?</h5>
+    <p>You can send us a message to our email:<strong> keybladeStories@gmail.com</strong>. We will greatly appreciate the help in improving the site and will work on resolving the issue as soon as possible.</p>
+</div>
