Added story view. Replaced dummy text

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -9,6 +9,6 @@
 <h4>Who <small class="text-muted">can join?</small></h4>
 <p>All those that enjoy reading and sharing their creativity with others are welcomed to join our growing community. Even if you doubt your abilities, you can still show what it is brewing within your mind. For this is a place for everyone to grow as both readers and authors through trial and error and working together to create something that people can enjoy. </p>
 <h4>What <small class="text-muted">is the next move?</small></h4>
-<p>Now is the time for your to begin your journey by creating your first story or by helpling edit and write some of the storyies already on the site. The choice is up to you. <br>
+<p>Now is the time for your to begin your journey by creating your first story or by helping edit and write some of the storyies already on the site. The choice is up to you. <br>
   The only thing that we don't recommend is going to the corner that has those guys whispering about blood, skull throne, and demons. That is a not so nice area. <br>
   Instead try to head down the path of butterflies, unicorns, and all that is good. Until you are driven to the point of throwing up since it is so nice and wonderful over their. It really isn't trust me!</p>
